--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
@@ -4,7 +4,8 @@
   "description": "인프런 웹팩 강의",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"여기에 빌드 스크립트를 추가합니다.\""
   },
   "repository": {
     "type": "git",
