react module install

--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/YunWonYong/webpack/issues"
   },
-  "homepage": "https://github.com/YunWonYong/webpack#readme"
+  "homepage": "https://github.com/YunWonYong/webpack#readme",
+  "dependencies": {
+    "react": "^18.2.0"
+  }
 }
