--- a/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
+++ b/inflearn/김정환_프론트엔드-개발환경의-이해와-실습/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "",
+    "dev": "lite-server",
     "build": "webpack"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "lite-server": "^2.6.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
