--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -22,7 +22,9 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "css-loader": "^3.4.2",
     "lite-server": "^2.6.1",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
