--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
     "lite-server": "^2.6.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
