--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^5.0.2",
     "lite-server": "^2.6.1",
     "style-loader": "^1.1.3",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
