--- a/inflearn/2. loader/package.json
+++ b/inflearn/2. loader/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "lecture-frontend-dev-env",
-  "version": "1.0.0",
-  "description": "\"프론트엔드 개발 환경의 이해\" 강의 자료입니다.",
-  "main": ".eslintrc.js",
-  "devDependencies": {
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  },
-  "scripts": {
-    "build": "webpack --progress"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeonghwan-kim/lecture-frontend-dev-env.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env/issues"
-  },
-  "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme"
+    "name": "2.-loader",
+    "version": "1.0.0",
+    "type": "commonjs",
+    "description": "webpack version 4 loader test",
+    "main": "./src/app.js",
+    "scripts": {
+        "build": "webpack",
+        "dev": "lite-server"
+    },
+    "author": "wonyong.yun",
+    "license": "ISC",
+    "engines": {
+        "node": ">=13.14.0"
+    },
+    "devDependencies": {
+        "lite-server": "^2.6.1",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
+    }
 }
