--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack && lite-server",
-    "build": "webpack"
+    "build": "webpack",
+    "develop-build": "set NODE_ENV=development&& npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "lite-server": "^2.6.1",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
