--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack && lite-server",
     "build": "webpack",
-    "develop-build": "set NODE_ENV=development&& npm run build"
+    "dev-build": "set NODE_ENV=development&& npm run build",
+    "live-build": "set NODE_ENV=production&& npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,9 +28,8 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "i": "^0.3.7",
     "lite-server": "^2.6.1",
-    "npm": "^10.2.5",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.1.3",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
