--- a/inflearn/webpack-v4/mission/3.plugin/package.json
+++ b/inflearn/webpack-v4/mission/3.plugin/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "lecture-frontend-dev-env",
-  "version": "1.0.0",
-  "description": "\"프론트엔드 개발 환경의 이해\" 강의 자료입니다.",
-  "main": ".eslintrc.js",
-  "devDependencies": {
-    "css-loader": "^3.4.1",
-    "file-loader": "^5.0.2",
-    "style-loader": "^1.1.2",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  },
-  "scripts": {
-    "build": "webpack --progress"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jeonghwan-kim/lecture-frontend-dev-env.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env/issues"
-  },
-  "homepage": "https://github.com/jeonghwan-kim/lecture-frontend-dev-env#readme"
+    "name": "3.plugin",
+    "version": "1.0.0",
+    "type": "commonjs",
+    "description": "webpack version 4 plugin test",
+    "main": "./src/app.js",
+    "scripts": {
+        "build": "webpack",
+        "dev": "lite-server",
+        "dev-build": "set NODE_ENV=development&& npm run build",
+        "live-build": "set NODE_ENV=production&& npm run build"
+    },
+    "author": "wonyong.yun",
+    "license": "ISC",
+    "engines": {
+        "node": ">=13.14.0"
+    },
+    "devDependencies": {
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^3.4.2",
+        "file-loader": "^5.0.2",
+        "html-webpack-plugin": "^3.2.0",
+        "lite-server": "^2.6.1",
+        "mini-css-extract-plugin": "^0.9.0",
+        "style-loader": "^1.1.3",
+        "url-loader": "^3.0.0",
+        "webpack": "^4.41.5",
+        "webpack-cli": "^3.3.10"
+    }
 }
