--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -26,6 +26,9 @@
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-arrow-functions": "^7.23.3",
+    "@babel/plugin-transform-block-scoping": "^7.23.4",
+    "@babel/plugin-transform-strict-mode": "^7.23.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
