--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -20,15 +20,13 @@
     "url": "https://github.com/YunWonYong/webpack/issues"
   },
   "homepage": "https://github.com/YunWonYong/webpack#readme",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "react": "^18.2.0"
-  },
-  "devDependencies": {
     "@babel/plugin-transform-arrow-functions": "^7.23.3",
     "@babel/plugin-transform-block-scoping": "^7.23.4",
     "@babel/plugin-transform-strict-mode": "^7.23.3",
+    "@babel/preset-env": "^7.23.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
