webpack에 babel loader 설정하기.

--- a/inflearn/webpack-v4/package.json
+++ b/inflearn/webpack-v4/package.json
@@ -21,13 +21,15 @@
   },
   "homepage": "https://github.com/YunWonYong/webpack#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/cli": "^7.23.4",
     "@babel/plugin-transform-arrow-functions": "^7.23.3",
     "@babel/plugin-transform-block-scoping": "^7.23.4",
     "@babel/plugin-transform-strict-mode": "^7.23.3",
-    "@babel/preset-env": "^7.23.6",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.11",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
