--- a/inflearn/webpack-v4/mission/4.babel/package.json
+++ b/inflearn/webpack-v4/mission/4.babel/package.json
@@ -4,7 +4,10 @@
   "description": "\"프론트엔드 개발 환경의 이해\" 강의 자료입니다.",
   "main": ".eslintrc.js",
   "devDependencies": {
+    "@babel/preset-env": "^7.7.7",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^2.6.11",
     "css-loader": "^3.4.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
@@ -15,7 +18,7 @@
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "build": "webpack --progress"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
