--- a/inflearn/webpack-v4/mission/4.babel/package.json
+++ b/inflearn/webpack-v4/mission/4.babel/package.json
@@ -12,6 +12,7 @@
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "regenerator-runtime": "^0.13.3",
     "style-loader": "^1.1.2",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
